--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,10 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<spring-cloud-dependencies.version>Hoxton.SR4</spring-cloud-dependencies.version>
 	</properties>
-
-	<dependencies>
+	
+		<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -92,6 +93,17 @@
             <artifactId>junit-platform-runner</artifactId>
             <scope>test</scope>
         </dependency>
+		        <dependency>
+		        	<groupId>org.springframework.cloud</groupId>
+		        	<artifactId>
+		        		spring-cloud-starter-netflix-ribbon
+		        	</artifactId>
+		        </dependency>
+		<dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka-server</artifactId>
+            <version>1.4.7.RELEASE</version>
+        </dependency>		        
 	</dependencies>
 
 	<build>
@@ -103,4 +115,22 @@
 		</plugins>
 	</build>
 
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>Hoxton.SR8</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud-dependencies.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+		</dependencies>
+	</dependencyManagement>
 </project>
