--- a/pom.xml
+++ b/pom.xml
@@ -103,8 +103,13 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-eureka-server</artifactId>
             <version>1.4.7.RELEASE</version>
-        </dependency>		        
-	</dependencies>
+        </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
+		</dependencies>
 
 	<build>
 		<plugins>
